--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -11,9 +11,7 @@
         android:id="@+id/screen_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/tab_indicator"
-        android:layout_below="@+id/tv_skip"
-        android:layout_marginBottom="8dp" />
+        android:layout_above="@+id/tab_indicator" />
 
     <Button
         android:id="@+id/btn_next"
@@ -61,18 +59,5 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"/>
 
-    <TextView
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="#2d2d2d"
-        android:id="@+id/tv_skip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:text="Skip"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"/>
 
 </RelativeLayout>
