--- a/app/src/main/res/drawable/textviewbg.xml
+++ b/app/src/main/res/drawable/textviewbg.xml
@@ -1,12 +1,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="4dp"
-        android:color="@color/gradient_start_color"/>
+        android:color="@color/white"/>
 
     <solid android:color="#ffff" />
 
     <corners
-        android:radius="45dp" />
+        android:radius="25dp" />
 
 
 </shape>
