--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,8 +3,8 @@
 
     <style name="Theme.LyricsSearcher" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/inappcolor</item>
+        <item name="colorPrimaryVariant">@color/bgcolor</item>
         <item name="colorOnPrimary">@color/white</item>
 
         <!-- Secondary brand color. -->
